# 2025-pyladies-christmas-workshop

./: README.md  equipment.md  pyproject.toml  requirements.txt
example_plotting/: cookie_network.py  wordcloud_collocation.py
example_plotting/recipes/: berlinerkrans.txt  brunepinner.txt  fattigmann.txt  krumkake.txt  pepperkake.txt  serinakake.txt  smultring.txt
example_turtle/: 10print.py  color_changing_starscape.py  fractal_tree.py  koch.py  simple_star.py
example_turtlethread/: fractal_tree_embroidery.py  heart.py  n_triangle.py  n_waffle.py  ngram_plot.py  snowflake.py  stitch_demo.py  waffle.py  waffles.py
